--- a/src/main/webapp/HTML/resources/css/cadastro-movimentacao.css
+++ b/src/main/webapp/HTML/resources/css/cadastro-movimentacao.css
@@ -1,7 +1,10 @@
 body {
 	background: #0e8aaf;
-	font-family: var(--bs-font-sans-serif);
-	padding: 15px 15px 100px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
+header {
+	padding: 15px;
 }
 
 .usuario {
@@ -19,12 +22,27 @@ h1 {
 	margin: 00 0 5px;
 }
 
+main {
+	display: flex;
+	height: auto;
+	align-items: center;
+	justify-content: center;
+	padding: 20px 0 80px;
+}
+
+.box {
+	background: #FFFFFF;
+	width: 264px;
+	border-radius: 5px;
+	padding: 39px 0;
+	text-align: center;
+}
+
 h2 {
 	font-style: normal;
-	font-weight: 400;
+	font-weight: bold;
 	font-size: 18px;
-	color: #FFF;
-	margin-bottom: 20px;
+	color: rgb(0, 0, 0);
 	text-align: center;
 }
 
@@ -33,24 +51,22 @@ nav{
 	float: right;
 }
 
-label.pesquisa {
-	background: #F0EDED;
-	border: 3px solid #FFFFFF;
-	border-radius: 10px;
-	width: 100%;
-	padding: 0 5px;
-	margin: 10px auto 0;
+form {
+	display: inline-block;
 }
 
-input.pesquisa {
-    width: calc(100% - 21px);
-    border: 0;
-    height: 30px;
-    background: #F0EDED
+label {
+	display: block;
+	margin: 20px 0 5px; 
+	text-align: left;
 }
 
-.container {
-	padding: 20px 0 0;
+.categoria {
+	display: block;
+}
+
+::placeholder {
+	padding-left: 5px;
 }
 
 .salvar {
@@ -61,7 +77,7 @@ input.pesquisa {
 	font-size: 14px;
 	width: 140px;
 	height: 35px;
-	margin: 40px auto 0;
+	margin: 20px auto 0;
 	display: block;
 }
 
