--- a/src/main/webapp/HTML/resources/css/cadastro-movimentacao.css
+++ b/src/main/webapp/HTML/resources/css/cadastro-movimentacao.css
@@ -1,3 +1,5 @@
+@import url("footer.css") ;
+
 body {
 	background: #0e8aaf;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -79,16 +81,4 @@ label {
 	height: 35px;
 	margin: 20px auto 0;
 	display: block;
-}
-
-.box_rodape {
-	background: #FFF;
-	border-radius: 30px 30px 0 0;
-	display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.box_rodape img {
-	margin: 10px;
 }
