--- a/src/main/webapp/resources/css/style_cadastro.css
+++ b/src/main/webapp/resources/css/style_cadastro.css
@@ -1,18 +1,23 @@
 body {
 	background: #0e8aaf;
-	font-family: var(--bs-font-sans-serif);
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .logo {
 	margin: 12px 0 0 24px;
 }
 
+main {
+	display: flex;
+	height: calc(100vh - 77px);
+	align-items: center;
+	justify-content: center;
+}
+
 .box {
 	background: #FFFFFF;
 	width: 264px;
-	height: 390px;
 	border-radius: 5px;
-	margin: 50px auto 0;
 	padding: 39px 0;
 	text-align: center;
 }
@@ -38,20 +43,6 @@ label {
 	display: block;
 	margin: 20px 0 5px; 
 	text-align: left;
-}
-
-.form-control {
-	border: 1px solid #797474;
-	border-radius: 3px;
-	height: 30px;
-}
-
-input {
-	height: 25px;
-	border-width: 1px;
-    border-style: solid;
-    border-color:rgb(133, 133, 133);
-	border-radius: 2.5px;
 }
 
 .nome {
@@ -81,7 +72,6 @@ input {
 	background-position: 95%;
 	background-size: 25px;
 }
-
 
 .criar_conta {
 	background: #F0EDED;
